--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,46 @@
+@font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Medium'), local('Montserrat-Medium'),
+        url('../fonts/Montserrat-Medium.woff2') format('woff2'),
+        url('../fonts/Montserrat-Medium.woff') format('woff'),
+        url('../fonts/Montserrat-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Semi Bold'), local('Montserrat-Semi-Bold'),
+        url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
+        url('../fonts/Montserrat-SemiBold.woff') format('woff'),
+        url('../fonts/Montserrat-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Bold'), local('Montserrat-Bold'),
+        url('../fonts/Montserrat-Bold.woff2') format('woff2'),
+        url('../fonts/Montserrat-Bold.woff') format('woff'),
+        url('../fonts/Montserrat-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Extra Bold'), local('Montserrat-Extra-Bold'),
+        url('../fonts/Montserrat-ExtraBold.woff2') format('woff2'),
+        url('../fonts/Montserrat-ExtraBold.woff') format('woff'),
+        url('../fonts/Montserrat-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+  }
+
 :root {
-  --family-gotham: 'Gotham Pro';
-  --family-agressive: 'AGRESSIVE';
+  --family-montserrat: 'Montserrat';
+  --color-red: #FF2E2E;
   --color-black: #000000;
   --color-white: #FFFFFF;
 }
@@ -13,6 +53,23 @@
     justify-content: center;
 }
 
+body {
+    background: var(--color-black);
+
+    font-family: var(--family-montserrat);
+}
+
+.text_color {
+    color: var(--color-red);
+}
+
+.btn.bg_red {
+    background: var(--color-red);
+
+    color: var(--color-white);
+}
+
+
 .input {}
 
 .section {}
@@ -22,7 +79,7 @@
 .section__title {}
 
 .container {
-  padding: 0 16px;
+  padding: 0 20px;
 }
 
 .header__container {
@@ -31,33 +88,414 @@
     justify-content: space-between;
 }
 
-.burger {
-    width: 24px;
-    height: 24px;
-
-    position: relative;
-}
-
 .burger__line {
     position: absolute;
-    left: 0;
+    left: 7px;
 
-    width: 100%;
+    width: 18px;
     height: 2px;
 
-    background: var(--color-black);
+    background: var(--color-white);
 
     display: block;
 }
 
 .burger__line.line_1 {
-    top: 0;
+    top: 9px;
 }
 
 .burger__line.line_2 {
-    top: 4px;
+    top: 13px;
 }
 
 .burger__line.line_3 {
-    top: 8px;
+    top: 17px;
 }
+
+.burger__line.line_4 {
+    bottom: 9px;
+}
+
+.header__logo-img {
+    max-width: 71px;
+}
+
+.header {
+    border-bottom: 1px solid var(--color-white);
+
+    transition: all .4s;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.header__container {
+    padding: 16px 0 14px;
+}
+
+.header__phone-mob {
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 500;
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+.burger {
+    width: 32px;
+    height: 32px;
+
+    border-radius: 50%;
+
+    background: var(--color-red);
+
+    position: relative;
+}
+
+.header__menu {
+    position: fixed;
+    top: 63px;
+    right: -100%;
+
+    width: 100%;
+
+    background: var(--color-white);
+    
+    padding: 25px 20px 36px;
+
+    z-index: 10;
+
+    transition: all .4s;
+}
+
+.header.active .header__menu {
+    right: 0;
+}
+
+.header.active {
+    border-bottom: 1px solid var(--color-black);
+
+    background: var(--color-white);
+}
+
+.header.active .header__phone-mob {
+    color: var(--color-black);
+}
+
+.header__model-name {
+    display: block;
+
+    font-size: 17px;
+    line-height: 19px;
+    font-weight: 500;
+    color: var(--color-black);
+}
+
+.header__local {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    margin-top: 25px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 600;
+    color: var(--color-black);
+}
+
+.header__menu-phone {
+    display: none;
+}
+
+.header__button {
+    gap: 8px;
+
+    height: 43px;
+
+    border-radius: 29px;
+
+    margin-top: 36px;
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+}
+
+/********* #MAIN-BANNER *********/
+
+.main-banner {
+    background: url(../img/main-banner_mob.webp)no-repeat;
+    background-size: cover;
+
+    aspect-ratio: 360/1015;
+
+    padding: 85px 0 32px;
+}
+
+.main-banner__container {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.main-banner__bottom {
+    padding-top: 23px;
+
+    border-top: 2px solid var(--color-white);
+}
+
+.main-banner__List {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 19px;
+}
+
+.main-banner__list-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 500;
+    color: var(--color-white);
+    text-transform: uppercase;
+}
+
+.main-banner__list-item  img {
+    width: 20px;
+    height: 20px;
+}
+
+.main-banner__list-item b {
+    font-weight: bold;
+}
+
+.main-banner__title {
+    font-size: 23px;
+    line-height: 29px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: var(--color-white);
+    text-align: center;
+}
+
+.main-banner__title b {
+    font-weight: 800;
+}
+
+.main-banner__title .text_color {
+    font-weight: 800;
+}
+
+.main-banner__timer {
+    margin-top: 15px;
+}
+
+.main-banner__timer-head {
+    display: block;
+
+    font-size: 13px;
+    line-height: 15px;
+    font-weight: 600;
+    color: var(--color-white);
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.timer {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    margin: 24px auto 0;
+}
+
+.time-count__item {
+    width: 40px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    position: relative;
+}
+
+.time-count__val {
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 29px;
+    color: var(--color-white);
+}
+
+.time-count__text {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: var(--color-white);
+    text-transform: uppercase;
+}
+
+.pie {
+    display: block;
+    width: 68px;
+    height: 68px;
+    border-radius: 50%;
+    transform: rotate(-90deg);
+    position: absolute;
+    bottom: -15px;
+    left: -13px;
+}
+
+.pie .background {
+    fill: none;
+    stroke: rgba(217, 217, 217, 0.2);
+    stroke-width: 1px;
+
+}
+
+.pie .chart {
+    fill: none;
+    stroke: var(--color-red);
+    stroke-width: 1;
+}
+
+.main-banner .container {
+    height: 100%;
+}
+
+.main-banner__info {
+    height: 100%;
+}
+
+.main-banner__info-cont {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100%;
+
+    padding-bottom: 25px;
+}
+
+.main-banner__price-old {
+    display: block;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.49);
+    text-decoration: line-through;
+    text-align: right;
+}
+
+.main-banner__flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main-banner__price-text._price {
+    display: block;
+
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 600;
+    color: var(--color-white);
+    text-transform: uppercase;
+}
+
+.main-banner__price-text._price-month {
+    display: block;
+
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 600;
+    color: var(--color-white);
+    text-transform: uppercase;
+}
+
+.main-banner__price {
+    display: block;
+
+    font-size: 30px;
+    line-height: 32px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.main-banner__price-month {
+    display: block;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 600;
+    color: var(--color-white);
+}
+
+.main-banner__flex.margin_top {
+    margin-top: 22px;
+}
+
+.main-banner__btns {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    margin-top: 26px;
+}
+
+.main-banner__button {
+    height: 63px;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 600;
+
+    border-radius: 45px;
+
+    background: none;
+}
+
+.main-banner__button._border {
+    border: 2px solid var(--color-red);
+
+    color: var(--color-white);
+}
+
+.main-banner__button._gradient {
+    background: linear-gradient(180deg, #FFF 0%, #777 100%);
+
+    color: var(--color-black);
+}
+
+.main-banner__prices {
+    padding: 7px 22px 22px 0;
+
+    border-radius: 23px;
+
+    border-right: 1px solid var(--color-white);
+
+    position: relative;
+}
+
+.main-banner__prices::before {
+    content: "";
+
+    display: block;
+
+    width: 100%;
+    height: 1px;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+}
+
+/*********($ .|. $)*********/
+/**********|__O__|*********/
