--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,61 @@
+@font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Regular'), local('Montserrat-Regular'),
+        url('../fonts/Montserrat-Regular.woff2') format('woff2'),
+        url('../fonts/Montserrat-Regular.woff') format('woff'),
+        url('../fonts/Montserrat-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Medium'), local('Montserrat-Medium'),
+        url('../fonts/Montserrat-Medium.woff2') format('woff2'),
+        url('../fonts/Montserrat-Medium.woff') format('woff'),
+        url('../fonts/Montserrat-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Semi Bold'), local('Montserrat-Semi-Bold'),
+        url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
+        url('../fonts/Montserrat-SemiBold.woff') format('woff'),
+        url('../fonts/Montserrat-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Bold'), local('Montserrat-Bold'),
+        url('../fonts/Montserrat-Bold.woff2') format('woff2'),
+        url('../fonts/Montserrat-Bold.woff') format('woff'),
+        url('../fonts/Montserrat-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+body {
+    font-family: var(--family-montserrat);
+}
+
+.upper_text {
+    text-transform: uppercase;
+}
+
 :root {
-  --family-gotham: 'Gotham Pro';
-  --family-agressive: 'AGRESSIVE';
-  --color-black: #000000;
-  --color-white: #FFFFFF;
+    --family-montserrat: 'Montserrat';
+    --color-blue: #062047;
+    --color-gray: #707070;
+    --color-black: #000000;
+    --color-white: #FFFFFF;
+}
+
+.container {
+    padding: 0 16px;
 }
 
 .btn {
@@ -11,6 +64,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.30);
+
+    border-radius: 7px;
+}
+
+.btn.bg_blue {
+    background: var(--color-blue);
+
+    color: var(--color-white);
+}
+
+.btn.border {
+    border: 3px solid var(--color-blue);
 }
 
 .input {}
@@ -22,18 +89,28 @@
 .section__title {}
 
 .container {
-  padding: 0 16px;
+    padding: 0 16px;
+}
+
+/********* #HEADER *********/
+
+.header {
+    background: var(--color-white);
+
+    position: relative;
 }
 
 .header__container {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
+
+    padding: 24px 0 21px;
 }
 
 .burger {
-    width: 24px;
-    height: 24px;
+    width: 19px;
+    height: 12px;
 
     position: relative;
 }
@@ -45,19 +122,152 @@
     width: 100%;
     height: 2px;
 
-    background: var(--color-black);
+    background: var(--color-blue);
+
+    display: block;
+
+    border-radius: 1px;
+
+    transition: all .4s;
+}
+
+.burger__line._line_1 {
+    top: 0;
+}
+
+.burger__line._line_2 {
+    top: 5px;
+}
+
+.burger__line._line_3 {
+    bottom: 0;
+}
+
+.header__top {
+    display: none;
+}
+
+.header__logo-img {
+    max-width: 154px;
+}
+
+.header__menu {
+    position: fixed;
+    right: -100%;
+    top: 74px;
+    width: 100%;
+
+    padding: 44px 16px 16px;
+
+    transition: all .4s;
+}
+
+.header__nav {
+    display: grid;
+    gap: 28px;
+}
+
+.header__nav-link {
+    text-decoration: none;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 500;
+    color: var(--color-gray);
+}
+
+.header__info {
+    margin-top: 63px;
+}
+
+.header__menu-line {
+    height: 2px;
+    width: 234px;
+
+    margin-left: -16px;
+
+    background: linear-gradient(270deg, #707070 0%, rgba(112, 112, 112, 0.00) 100%);
+}
+
+.header__menu-info {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    margin-top: 17px;
+}
+
+.header__info-text {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-gray);
 
     display: block;
 }
 
-.burger__line.line_1 {
-    top: 0;
+.header__menu-link {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 500;
+    color: var(--color-gray);
+
+    display: block;
+
+    text-decoration: none;
 }
 
-.burger__line.line_2 {
-    top: 4px;
+.header__button {
+    height: 43px;
+
+    margin-top: 16px;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 500;
+    color: var(--color-white);
 }
 
-.burger__line.line_3 {
-    top: 8px;
+.header.active .header__menu {
+    right: 0;
 }
+
+.header::after {
+    content: "";
+
+    display: block;
+
+    height: 2px;
+    width: 0;
+
+    position: absolute;
+    bottom: 0;
+    right: -100%;
+
+    background: var(--color-blue);
+
+    transition: all .4s;
+}
+
+.header.active::after {
+    right: 0;
+
+    width: 100%;
+}
+
+.header.active .burger__line._line_1 {
+    top: 5px;
+    transform: rotate(45deg);
+}
+
+.header.active .burger__line._line_2 {
+    opacity: 0;
+    transform: scale(-1);
+}
+
+.header.active .burger__line._line_3 {
+    bottom: 5px;
+    transform: rotate(-45deg);
+}
+
+/*---------------------------------------------*/
