--- a/css/desk-style.css
+++ b/css/desk-style.css
@@ -27,6 +27,8 @@
 
     width: max-content;
     flex-basis: 40%;
+
+    background: none;
 }
 
 .header-nav {
@@ -84,8 +86,105 @@
 /**************************/
 
 
+/********* $MAIN-BANNER *********/
+
+.main-banner {
+    aspect-ratio: 1920/800;
+
+    height: auto;
+}
+
+.main-banner__container {
+    padding: 150px 0 110px;
+
+    height: 100%;
+}
+
+.main-banner__title {
+    font-size: 48px;
+    line-height: 50px;
+}
+
+.main-banner__list {
+    margin-top: 44px;
+
+    padding: 5px 0 5px 36px;
+
+    gap: 7px;
+}
+
+.main-banner__list-item {
+    font-size: 32px;
+    line-height: 34px;
+}
+
+.main-banner__list-item br {
+    display: none;
+}
+
+.main-banner__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 240px;
+    height: 60px;
+
+    margin-top: 45px;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.main-banner .swiper-pagination-bullet {
+    width: 60px;
+}
+
+/**************************/
+
+
+@media screen and (max-width: 1710px) {
+    .main-banner__container {
+        padding: 95px 0 90px;
+    }
+
+    .main-banner__title {
+        font-size: 38px;
+        line-height: 40px;
+    }
+
+    .main-banner__list-item {
+        font-size: 25px;
+        line-height: 27px;
+    }
+}
+
 @media screen and (max-width: 1280px) {
     .container {
         max-width: 1000px;
+    }
+
+    .main-banner__list {
+        margin-top: 20px;
+    }
+
+    .main-banner__button {
+        margin-top: 20px;
+    }
+
+    .main-banner__title {
+        font-size: 33px;
+        line-height: 35px;
+    }
+
+    .main-banner__list-item {
+        font-size: 23px;
+        line-height: 25px;
+    }
+
+    .main-banner__container {
+        padding: 80px 0 80px;
     }
 }
