--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 :root {
-  --family-inter: 'Inter';
-  --color-black: #2c2c2c;
-  --color-white: #FFFFFF;
-  --color-red: #ae2626;
+    --family-inter: 'Inter';
+    --color-black: #2c2c2c;
+    --color-white: #FFFFFF;
+    --color-red: #ae2626;
 }
 
 @font-face {
@@ -13,9 +13,9 @@
         url('../fonts/Inter-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: 'Inter';
     src: local('Inter Medium'), local('Inter-Medium'),
         url('../fonts/Inter-Medium.woff2') format('woff2'),
@@ -23,9 +23,9 @@
         url('../fonts/Inter-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: 'Inter';
     src: local('Inter Regular'), local('Inter-Regular'),
         url('../fonts/Inter-Regular.woff2') format('woff2'),
@@ -33,13 +33,11 @@
         url('../fonts/Inter-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
-  }
+}
 
-  body {
+body {
     font-family: var(--family-inter);
-
-    background: var(--color-black);
-  }
+}
 
 .btn {
     width: 100%;
@@ -79,6 +77,14 @@
     background: none;
 }
 
+.text_bg {
+    background: var(--color-red);
+
+    display: inline-block;
+
+    padding: 0 3px;
+}
+
 .input {}
 
 .section {}
@@ -88,13 +94,14 @@
 .section__title {}
 
 .container {
-  padding: 0 20px;
+    padding: 0 20px;
 }
 
 .header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
 
     width: 100%;
 }
@@ -167,7 +174,7 @@
     align-items: flex-end;
 }
 
-.header-info__text-icon + span {
+.header-info__text-icon+span {
     display: none;
 }
 
@@ -244,4 +251,103 @@
     top: 7px;
 
     transform: rotate(-45deg);
+}
+
+/**************************/
+
+
+/********* $MAIN-BANNER *********/
+
+.main-banner {
+    aspect-ratio: 360/440;
+}
+
+.swiper-main-banner {
+    height: 100%;
+}
+
+.main-banner__container {
+    padding: 69px 0 65px;
+}
+
+.main-banner__title {
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 700;
+    color: var(--color-white);
+    text-transform: uppercase;
+}
+
+.main-banner__list {
+    margin-top: 42px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    padding-left: 20px;
+
+    position: relative;
+}
+
+.main-banner__list::before {
+    content: "";
+
+    display: block;
+
+    height: 100%;
+    width: 2px;
+
+    background: var(--color-red);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.main-banner__list-item {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.main-banner__bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    object-fit: cover;
+}
+
+.main-banner .swiper-pagination-bullet {
+    width: 28px;
+    height: 2px;
+
+    border-radius: 0;
+
+    background: rgba(255, 255, 255, 0.5);
+
+    opacity: 1;
+}
+
+.main-banner .swiper-pagination-bullet-active {
+    background: var(--color-white);
+}
+
+.main-banner__button {
+    display: none;
+}
+
+/**************************/
+
+@media screen and (min-width: 450px) {
+    .main-banner {
+        aspect-ratio: auto;
+
+        height: 440px;
+    }
 }
