--- a/css/style.css
+++ b/css/style.css
@@ -85,13 +85,49 @@ body {
     padding: 0 3px;
 }
 
-.input {}
+.color_text {
+    color: var(--color-red);
+}
 
-.section {}
+.input {
+    width: 100%;
 
-.section__upper {}
+    border: none;
+}
 
-.section__title {}
+.banner__input {
+    height: 40px;
+
+    background: rgba(255, 255, 255, 0.1);
+
+    padding-left: 15px;
+
+    border-bottom: 1px solid var(--color-white);
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.banner__input::placeholder {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.section__upper {
+    padding: 40px 0 20px;
+}
+
+.section__title {
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: var(--color-black);
+    text-align: center;
+}
 
 .container {
     padding: 0 20px;
@@ -195,7 +231,7 @@ body {
 .header-menu {
     position: fixed;
     right: -100%;
-    top: 60px;
+    top: 57px;
 
     width: 100%;
 
@@ -231,6 +267,10 @@ body {
 
 .header-nav__link:last-child {
     border: none;
+}
+
+.header.active {
+    background: var(--color-black);
 }
 
 .header.active .header-menu {
@@ -344,10 +384,525 @@ body {
 
 /**************************/
 
+/********* $FORM-TIMER *********/
+
+.form-timer {
+    background: var(--color-black);
+
+    padding: 15px 0 24px;
+}
+
+.form__checkbox-label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.form__checkbox-check[type=checkbox] {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    z-index: 2;
+}
+
+.form__checkbox-check[type=checkbox]+.form-checkbox__custom {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-color: var(--color-red);
+    border-radius: 5px;
+}
+
+.form__checkbox-check[type=checkbox]:checked+.form-checkbox__custom {
+    background-image: url(../img/check.svg);
+    background-repeat: no-repeat;
+    background-size: 11px;
+    background-position: center;
+}
+
+.form__checkbox-text {
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.checkbox-link {
+    color: var(--color-white);
+}
+
+.form-timer__timer-text {
+    display: block;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-white);
+    text-align: center;
+
+    margin-bottom: 7px;
+}
+
+.timer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.time-count__val {
+    font-size: 32px;
+    line-height: 34px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.time-count__text {
+    display: block;
+
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    color: var(--color-white);
+    text-align: center;
+}
+
+.timer-points {
+    font-size: 32px;
+    line-height: 34px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.form-timer__form {
+    margin-top: 31px;
+}
+
+.form-timer__form-button {
+    margin-top: 20px;
+
+    height: 40px;
+
+    text-transform: uppercase;
+}
+
+/**************************/
+
+
+/********* $MODELS *********/
+
+.models-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.model-names__button {
+    display: block;
+
+    margin: 20px auto 0;
+
+    background: none;
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-black);
+    text-decoration: underline;
+}
+
+.models-list__item {
+    text-align: center;
+
+    border: 1px solid rgb(239, 239, 239);
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.15);
+    /* white */
+    background: rgb(255, 255, 255);
+
+    height: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.models-list__link {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-black);
+    text-decoration: none;
+}
+
+.models-card__head {
+    display: block;
+
+    margin-bottom: 15px;
+
+    font-size: 22px;
+    line-height: 24px;
+    font-weight: 700;
+    color: var(--color-black);
+    text-transform: uppercase;
+}
+
+.models-cards {
+    margin-top: 60px;
+}
+
+.models-card {
+    padding: 21px 0 15px;
+
+    position: relative;
+
+    border: 1px solid rgb(239, 239, 239);
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.15);
+    /* white */
+    background: rgb(255, 255, 255);
+}
+
+.models-card::before {
+    content: "";
+
+    display: block;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 50%;
+
+    background: rgba(239, 239, 239, 1);
+
+    z-index: -1;
+}
+
+.models-card__price-old {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-black);
+    text-decoration: line-through;
+
+    display: block;
+
+    margin-bottom: 10px;
+}
+
+.models-card__prices-text._price {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-black);
+
+    margin-bottom: 10px;
+}
+
+.models-card__prices-text._price .color_text {
+    font-weight: 700;
+}
+
+.models-card__prices-text._price-month {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+    color: var(--color-black);
+}
+
+.models-card__prices {
+    margin-bottom: 15px;
+}
+
+.models-card__prices.mob_hide {
+    display: none;
+}
+
+.models-card__car {
+    position: relative;
+}
+
+.modesl-card__img {
+    width: 100%;
+
+    display: block;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    opacity: 0;
+
+    transition: all .3s;
+}
+
+.modesl-card__img.active {
+    position: static;
+
+    opacity: 1;
+}
+
+.colors {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.models-card__color {
+    display: block;
+
+    width: 26px;
+    height: 26px;
+
+    position: relative;
+
+    cursor: pointer;
+}
+
+.models-card__color.color-active::before {
+    content: "";
+
+    display: block;
+
+    width: 32px;
+    height: 32px;
+
+    border: 1px solid var(--color-black);
+
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    right: -3px;
+    bottom: -3px;
+
+    z-index: -1;
+}
+
+.models-card__colors-text {
+    margin-top: 10px;
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-black);
+    text-align: center;
+
+    display: block;
+}
+
+.models-card__colors-text b {
+    font-weight: 700;
+}
+
+.models-card__actions {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+
+    margin-top: 30px;
+}
+
+.models-card__actions.mob_hide {
+    display: none;
+}
+
+.models-card__actions-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+
+    text-align: center;
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.models-card__button {
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.models-card__btns {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    margin-top: 30px;
+}
+
+.models-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+
+/**************************/
+
+
+/********* $EQUIPS *********/
+
+.equips-card {
+    border: 1px solid rgb(239, 239, 239);
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.15);
+    /* white */
+    background: rgb(255, 255, 255);
+
+    padding: 0 0 20px;
+}
+
+.equips-card__info {
+    background: rgba(239, 239, 239, 1);
+
+    padding: 20px 20px 24px;
+}
+
+.equips-card__model {
+    display: block;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: var(--color-black);
+}
+
+.equips-card__texts {
+    position: relative;
+}
+
+.equips-card__name {
+    display: block;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    color: var(--color-black);
+}
+
+.equips-card__texts-number {
+    width: 62px;
+    height: 26px;
+
+    text-align: center;
+
+    border: 1px solid var(--color-black);
+
+    font-size: 8px;
+    line-height: 10px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.equips-card__texts-number.mob_hide {
+    display: none;
+}
+
+.equips-card__texts-decor {
+    text-decoration: underline;
+}
+
+.equips-card__texts-flex {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.equips-card__img {
+    width: 100%;
+}
+
+.equips-card__price.mob_hide {
+    display: none;
+}
+
+.equips-card__prices {
+    margin-top: 20px;
+}
+
+.equips-card__price-old {
+    display: block;
+
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    color: var(--color-black);
+    text-decoration: line-through;
+
+    margin-bottom: 5px;
+}
+
+.equips-card__price {
+    display: block;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    color: var(--color-black);
+
+    margin-bottom: 5px;
+}
+
+.equips-card__price-month {
+    display: block;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.equips-card__actions.mob_hide {
+    display: none;
+}
+
+.equips-card__actions {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+
+    margin-top: 20px;
+}
+
+.equips-card__actions-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.equips-card__btns {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    margin-top: 20px;
+    padding: 0 20px;
+}
+
+.equips-card__button {
+    height: 50px;
+}
+
+/**************************/
+
 @media screen and (min-width: 450px) {
     .main-banner {
         aspect-ratio: auto;
 
         height: 440px;
+    }
+
+    .form-timer__container {
+        width: 400px;
+
+        margin: 0 auto;
+    }
+
+    .models-card__cont {
+        width: 400px;
+
+        margin: 0 auto;
     }
 }
