--- a/css/tablet-style.css
+++ b/css/tablet-style.css
@@ -2,6 +2,11 @@
     padding: 0 30px;
 }
 
+.btn {
+    font-size: 14px;
+    line-height: 16px;
+}
+
 
 /********* $MAIN-BANNER *********/
 
@@ -23,6 +28,65 @@
 .main-banner__list-item {
     font-size: 20px;
     line-height: 22px;
+}
+
+/**************************/
+
+
+/********* $FORM-TIMER *********/
+
+.form-timer {
+    padding: 27px 0 36px;
+}
+
+.form-timer__container {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 100%;
+}
+
+.form-timer__form {
+    margin-top: 0;
+
+    flex-basis: 63%;
+}
+
+.form-timer__form-flex {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.form-timer__form-button {
+    margin-top: 0;
+
+    flex-basis: 50%;
+
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.form-timer__form-input {
+    flex-basis: 50%;
+}
+
+.form-timer__timer-text {
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.time-count__val,
+.timer-points {
+    font-size: 40px;
+    line-height: 42px;
+}
+
+.time-count__text {
+    font-size: 9px;
+    line-height: 11px;
 }
 
 /**************************/
