--- a/css/style.css
+++ b/css/style.css
@@ -870,6 +870,11 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 10px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-black);
 }
 
 .equips-card__btns {
@@ -883,6 +888,50 @@ body {
 
 .equips-card__button {
     height: 50px;
+}
+
+.equips__filter {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    margin-bottom: 20px;
+}
+
+.select2-container--default .select2-selection--single {
+    border: none;
+    border-radius: 0;
+
+    border-bottom: 1px solid var(--color-black);
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border: none;
+
+    width: 9px;
+    height: 7px;
+
+    background: url(../img/arrow-select.svg)no-repeat;
+}
+
+.select2-search--dropdown {
+    display: none;
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+    background-color: var(--color-red);
+}
+
+.equips-list {
+    display: grid;
+    gap: 20px;
 }
 
 /**************************/
@@ -901,6 +950,18 @@ body {
     }
 
     .models-card__cont {
+        width: 400px;
+
+        margin: 0 auto;
+    }
+
+    .equips__filter {
+        width: 400px;
+
+        margin: 0 auto 20px;
+    }
+
+    .equips-card {
         width: 400px;
 
         margin: 0 auto;
