--- a/css/desk-style.css
+++ b/css/desk-style.css
@@ -387,6 +387,13 @@
     display: flex;
 }
 
+.equips-card__texts-number {
+    font-size: 10px;
+    line-height: 12px;
+
+    gap: 3px;
+}
+
 .equips-card__model {
     margin-bottom: 24px;
 
@@ -411,6 +418,307 @@
     align-items: center;
 
     padding: 0 10px;
+}
+
+.equips-card__actions.desk_hide {
+    display: none;
+}
+
+.equips-card__actions.mob_hide {
+    display: grid;
+}
+
+.equips-card__actions {
+    margin-top: 48px;
+}
+
+.equips-card__prices.desk_hide {
+    display: none;
+}
+
+.equips-card__prices.mob_hide {
+    display: block;
+}
+
+.equips-card__prices {
+    margin-top: 0;
+}
+
+.equips-card__price-old {
+    font-size: 16px;
+    line-height: 18px;
+
+    text-align: right;
+
+    margin-bottom: 10px;
+}
+
+.equips-card__price {
+    font-size: 20px;
+    line-height: 22px;
+    text-align: right;
+
+    margin-bottom: 10px;
+}
+
+.equips-card__price-month {
+    font-size: 16px;
+    line-height: 18px;
+    text-align: right;
+}
+
+.equips-card__actions-item {
+    flex-direction: row;
+
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.equips-card__name {
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.equips-card__btns {
+    margin-top: 29px;
+    padding: 0;
+}
+
+/**************************/
+
+
+/********* $BANNERS *********/
+
+.banner {
+    margin-top: 100px;
+}
+
+.banner__mob {
+    display: none;
+}
+
+.banner__bg {
+    background: none;
+
+    position: relative;
+}
+
+.banner__mob-img.mob_hide {
+    display: block;
+}
+
+.credits__bg {
+    padding: 63px 0 45px;
+}
+
+.trade__bg {
+    padding: 36px 0;
+}
+
+.banner__container {
+    width: 100%;
+}
+
+.banner__title.mob_hide {
+    display: block;
+}
+
+.banner__title {
+    font-size: 32px;
+    line-height: 34px;
+}
+
+.credits__title {
+    margin-bottom: 30px;
+}
+
+.credits-list {
+    padding-left: 30px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.banner-list__item {
+    font-size: 22px;
+    line-height: 24px;
+
+    gap: 20px;
+}
+
+.credits-list::before {
+    background: var(--color-red);
+}
+
+.banner__form {
+    margin-top: 40px;
+
+    width: 470px;
+}
+
+.banner__form-container {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.banner__button {
+    margin-top: 0;
+
+    flex-basis: 50%;
+}
+
+.banner .banner__input {
+    flex-basis: 50%;
+}
+
+.trade__title {
+    text-align: right;
+
+    margin-bottom: 17px;
+}
+
+.trade__form {
+    margin: 31px 0 0 auto;
+}
+
+/**************************/
+
+
+/********* $CONTACTS *********/
+
+.contacts__img.desk_hide {
+    display: none;
+}
+
+.contacts__img.mob_hide {
+    display: block;
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    top: 0;
+    left: 0;
+
+    object-fit: cover;
+}
+
+.contacts__bg {
+    padding: 30px 0;
+
+    position: relative;
+
+    background: none;
+}
+
+.contacts {
+    margin-top: 100px;
+}
+
+.contacts__container {
+    background: var(--color-red);
+
+    width: 480px;
+
+    padding: 39px 0 29px 34px;
+}
+
+.contacts__img-logo {
+    display: block;
+
+    margin: 0 auto;
+
+    max-width: 142px;
+}
+
+.contacts__title {
+    display: none;
+}
+
+.contacts__list {
+    margin-top: 20px;
+}
+
+.contacts__list-item {
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.contacts__button {
+    margin: 20px 0 0;
+
+    width: 220px;
+}
+
+/**************************/
+
+
+/********* $FOOTER *********/
+
+.footer {
+    padding: 42px 0;
+}
+
+.footer__links {
+    gap: 30px;
+}
+
+.footer__container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.footer__info {
+    margin-top: 0;
+
+    flex-basis: 46%;
+
+    text-align: right;
+}
+
+/**************************/
+
+
+/********* $POPUP *********/
+
+.popup {
+    width: 600px;
+}
+
+#modalCredit {
+    background: url(../img/modal-credit_desk.webp)no-repeat;
+    background-size: cover;
+}
+
+#modalRequest {
+    background: url(../img/modal-req_desk.webp)no-repeat;
+    background-size: cover;
+}
+
+.popup__container {
+    padding: 20px 20px 25px;
+}
+
+.popup__head {
+    font-size: 32px;
+    line-height: 34px;
+}
+
+.popup-list {
+    margin-top: 30px;
+}
+
+.popup-list__item {
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.popup-form {
+    margin-top: 3px;
 }
 
 /**************************/
@@ -489,5 +797,29 @@
 
     .models-card__colors {
         margin-top: 49px;
+    }
+
+    .equips-card__model {
+        font-size: 24px;
+        line-height: 26px;
+    }
+
+    .equips-card__img {
+        max-width: 367px;
+    }
+
+    .equips-card__price-month {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .equips-card__price {
+        font-size: 18px;
+        line-height: 20px;
+    }
+
+    .equips-card__actions-item {
+        font-size: 14px;
+        line-height: 16px;
     }
 }
